--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "actions-on-google": "^2.3.0",
     "deepcopy": "^1.0.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3"
